[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Bachmann, Benjamin <Benjamin.Bachmann@zuehlke.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'     # Abort on panic

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
