[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Bachmann, Benjamin <Benjamin.Bachmann@zuehlke.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'     # Abort on panic

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
itertools = "0.9.0"
euler = "0.4.0"
gcd = "2.0.1"
hilbert = "0.1.1"
num = "0.2"
nom = "5.0"
ndarray = "0.14.0"
phf = { version = "0.8.0", features = ["macros"] }
